--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>br.com.evandropires</groupId>
-	<artifactId>quartz</artifactId>
-	<version>1.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<artifactId>quartz-dynamic-pool</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -23,8 +23,8 @@
     </dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
 </project>
